--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "medicine-backend",
   "version": "1.0.0",
   "description": "Backend for a medicine tracking web app",
-  "main": "app.js",
+  "main": "src/app.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
