--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "express": "^4.17.1",
     "form-data": "^4.0.0",
     "jsonwebtoken": "^9.0.0",
-    "mailgun": "^0.5.0",
     "nodemailer": "^6.9.1",
+    "sqlite": "^4.1.2",
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
