--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "form-data": "^4.0.0",
     "jsonwebtoken": "^9.0.0",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.9.1",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.0.2"
